fix article info vertical alignment

--- a/news-today/src/components/Article.css
+++ b/news-today/src/components/Article.css
@@ -18,7 +18,7 @@
   margin-right: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   text-align: right;
   align-items: flex-end;
 }
